--- a/index.html
+++ b/index.html
@@ -20,93 +20,7 @@
         }
         </style>
         <title></title>
-    
-
-<style id="embed-popup-overrides">
-/* Compact but readable popup styling */
-.leaflet-popup-content-wrapper {
-  /* Allow wider popups while keeping them compact */
-  max-width: min(50vw, 480px) !important;  /* half-ish of viewport or up to 480px */
-  min-width: 340px;                         /* prevent overly skinny popups */
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,.25);
-}
-.leaflet-popup-content {
-  font-size: 13px;
-  line-height: 1.35;
-  max-height: min(45vh, 360px);             /* compact, but enough space to read */
-  overflow: auto;
-}
-.leaflet-container a.leaflet-popup-close-button {
-  font-size: 18px;
-  right: 8px;
-  top: 6px;
-}
-.leaflet-popup-content table {
-  width: 100%;
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-.leaflet-popup-content td, .leaflet-popup-content th {
-  padding: 4px 6px;
-  vertical-align: top;
-  word-break: break-word;
-}
-/* 30% smaller media */
-.leaflet-popup-content img, .leaflet-popup-content video {
-  max-width: 70%;
-  height: auto;
-  display: block;
-  margin: 4px auto;
-  border-radius: 4px;
-}
-/* On very small iframes, let width adapt */
-@media (max-width: 720px) {
-  .leaflet-popup-content-wrapper {
-    max-width: 90vw !important;
-    min-width: 280px;
-  }
-}
-</style>
-
-
-
-
-<script id="embed-popup-script">
-(function() {
-  function sizePx() {
-    var vw = Math.min(window.innerWidth * 0.50, 480);
-    var vh = Math.min(window.innerHeight * 0.45, 360);
-    var w = Math.max(340, Math.floor(vw));  // enforce sensible minimum width
-    var h = Math.max(240, Math.floor(vh));  // compact but usable
-    // On very small embeds, relax to fit
-    if (window.innerWidth < 720) {
-      w = Math.max(280, Math.min(window.innerWidth * 0.90, 480));
-    }
-    return {w: w, h: h};
-  }
-  function applyDefaults() {
-    if (window.L && L.Popup && L.Popup.prototype) {
-      var s = sizePx();
-      L.Popup.prototype.options.maxWidth = s.w;
-      L.Popup.prototype.options.maxHeight = s.h;
-      L.Popup.prototype.options.keepInView = true;
-      L.Popup.prototype.options.autoPanPaddingTopLeft = [16,16];
-      L.Popup.prototype.options.autoPanPaddingBottomRight = [16,16];
-    }
-    document.querySelectorAll('.leaflet-popup-content-wrapper').forEach(function(el) {
-      var s = sizePx();
-      el.style.maxWidth = s.w + 'px';
-      el.style.maxHeight = s.h + 'px';
-    });
-  }
-  applyDefaults();
-  window.addEventListener('resize', applyDefaults);
-})();
-</script>
-
-
-</head>
+    </head>
     <body>
         <div id="map">
         </div>
@@ -226,7 +140,7 @@
 			layer.on('popupopen', function(e) {
 				addClassToPopupIfMedia(content, e.popup);
 			});
-			layer.bindPopup(content, { maxHeight: 300, keepInView: true });
+			layer.bindPopup(content, { maxHeight: 400 });
         }
 
         function style_sitesv2_1_0() {
@@ -286,7 +200,7 @@
 			layer.on('popupopen', function(e) {
 				addClassToPopupIfMedia(content, e.popup);
 			});
-			layer.bindPopup(content, { maxHeight: 300, keepInView: true });
+			layer.bindPopup(content, { maxHeight: 400 });
         }
 
         function style_continentpoints_2_0() {
