--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }).fitBounds([[-161.51418677503898,-373.2807677312826],[186.95127146303724,301.2393815694072]]);
         
 
-// Added by ChatGPT: permanent "Updated" label bottom-right
+// CHANGE BOTTOM RIGHT DATE HERE
 var updatedControl = L.control({ position: 'bottomright' });
 updatedControl.onAdd = function (map) {
     var div = L.DomUtil.create('div', 'updated-text');
@@ -66,7 +66,7 @@ updatedControl.onAdd = function (map) {
     return div;
 };
 updatedControl.addTo(map);
-// End ChatGPT addition
+// // CHANGE BOTTOM RIGHT DATE HERE
 var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
