--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 var updatedControl = L.control({ position: 'bottomright' });
 updatedControl.onAdd = function (map) {
     var div = L.DomUtil.create('div', 'updated-text');
-    div.innerHTML = "Updated: September 2025";
+    div.innerHTML = "Updated: October\ 20276";
     return div;
 };
 updatedControl.addTo(map);
